k8s/overlays/prod-canary-vs-dr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-demo-prod-vs-dr
  labels:
    istio-injection: enabled
