k8s/overlays/prod-canary-vs-dr/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-demo-vs
spec:
  hosts:
  - argo-demo.argo-demo-prod.svc.cluster.local
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: argo-demo.argo-demo-prod.svc.cluster.local
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: argo-demo.argo-demo-prod.svc.cluster.local
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0
